Missing Fields on EssayView. Missing Binding on Allow Tabs CheckBox

--- a/EssayMaker.Windows/SidePanel-Settings.xaml
+++ b/EssayMaker.Windows/SidePanel-Settings.xaml
@@ -96,6 +96,7 @@
                           Margin="2" Width="120"/>
 
                 <CheckBox Content="Allow Tabs"
+                          IsChecked="{Binding AcceptsTab}"
                           Foreground="{DynamicResource IdealForegroundColorBrush}"
                           Grid.Row="2" Grid.Column="1" Margin="2"/>
 
