--- a/EssayMaker.Windows/EssayView.xaml
+++ b/EssayMaker.Windows/EssayView.xaml
@@ -5,7 +5,8 @@
              xmlns:essay="clr-namespace:EssayMaker.Core;assembly=EssayMaker.Core"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" d:DesignHeight="500" d:DesignWidth="900" d:DataContext="{d:DesignInstance essay:Essay}">
+             mc:Ignorable="d" d:DesignHeight="500" d:DesignWidth="900" 
+             d:DataContext="{d:DesignInstance essay:Essay}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -15,19 +16,34 @@
             <RowDefinition Height=".2*"/>
         </Grid.RowDefinitions> 
         
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-
         <TextBox Text="{Binding Title}" Foreground="{DynamicResource AccentColorBrush}"
                  metro:TextboxHelper.Watermark="Title"
                  FontFamily="Segoe UI light" FontSize="36" 
                  Grid.Row="0" Margin="2"/>
 
-        <TextBox Text="{Binding Author}"
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="160"/>
+            </Grid.ColumnDefinitions>
+            
+            <TextBox Text="{Binding Author}"
                  metro:TextboxHelper.Watermark="Author"
                  FontFamily="Segoe UI Light" FontSize="20"
-                 Grid.Row="1"  Margin="2"/>
+                 Grid.Column="0" Margin="2"/>
+
+            <TextBox Text="{Binding TeacherName}"
+                 metro:TextboxHelper.Watermark="Teacher Name"
+                 FontFamily="Segoe UI Light" FontSize="20"
+                 Grid.Column="1" Margin="2"/>
+            
+            <DatePicker SelectedDate="{Binding Date}"
+                        metro:TextboxHelper.Watermark="Date"
+                        FontFamily="Segoe UI Light" FontSize="18"
+                        Grid.Column="2" Margin="2"/>
+        </Grid>
+        
         
         <TextBox Text="{Binding Thesis}" AcceptsReturn="True"
                  metro:TextboxHelper.Watermark="Thesis"
@@ -93,8 +109,6 @@
                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
                  Grid.Row="4" Margin="2"/>
-
-
     </Grid>
 </UserControl>
 
