--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -354,7 +354,7 @@ footer span.right-tail {
 }
 
 footer span.octocat {
-  background: transparent url(../images/octocat.png) 0 0 no-repeat;
+  background: transparent url(http://i.imgur.com/woYyE9I.png) 0 0 no-repeat;
   display: block;
   width: 30px;
   height: 30px;
