--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -354,10 +354,10 @@ footer span.right-tail {
 }
 
 footer span.octocat {
-  background: transparent url(http://i.imgur.com/woYyE9I.png) 0 0 no-repeat;
+  background: transparent url(http://i.imgur.com/RVGQbBs.png) 0 0 no-repeat;
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
 }
 
