--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -300,7 +300,7 @@ footer span.right-tail {
 }
 
 footer span.octocat {
-  background: transparent url(../images/octocat-2x.png) 0 0 no-repeat;
+  background: transparent url(http://i.imgur.com/RVGQbBs.png) 0 0 no-repeat;
   display: block;
   width: 60px;
   height: 60px;
