--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -361,17 +361,17 @@ footer span.octocat {
   margin: 0 auto;
 }
 body span.essaymakerfull {
-  background: transparent url(http://i.imgur.com/vVE8lUF.png) 0 0 no-repeat;
+  background: transparent url(http://i.imgur.com/94yEtvO.png) 0 0 no-repeat;
   display: block;
-  width: 640px;
-  height: 640px;
+  width: 340px;
+  height: 340px;
   margin: 0 auto;
 }
 body span.essaymakerlite {
-  background: transparent url(http://i.imgur.com/fLKhX7g.png) 0 0 no-repeat;
+  background: transparent url(http://i.imgur.com/0hSEse4.png) 0 0 no-repeat;
   display: block;
-  width: 640px;
-  height: 640px;
+  width: 340px;
+  height: 340px;
   margin: 0 auto;
 }
 
