--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -429,6 +429,8 @@ img {
   box-shadow: 0px 0px 0px #bdb6ad;
   border: 0px solid #fff6e9;
   max-width: 640px;
+  margin: 5px;
+  transform: scale(0.5,0.5);
 }
 
 hr {
