--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -429,7 +429,7 @@ img {
   box-shadow: 0px 0px 0px #bdb6ad;
   border: 0px solid #fff6e9;
   max-width: 640px;
-  margin: 5px;
+  margin: 0px auto;
   transform: scale(0.5,0.5);
 }
 
