--- a/EssayMaker.WPF/EssayView.xaml
+++ b/EssayMaker.WPF/EssayView.xaml
@@ -103,9 +103,14 @@
                                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
                                  Margin="2"
                                  metro:TextboxHelper.Watermark="Topic Name"
-                                 ToolTip="Please leave this marked in!"
                                  TextWrapping="Wrap" 
-                                 > 
+                                 >
+                            <TextBox.ToolTip>
+                                <StackPanel>
+                                    <TextBlock FontWeight="Bold">Topic Name</TextBlock>
+                                    <TextBlock>The name of the topic.</TextBlock>
+                                </StackPanel>
+                            </TextBox.ToolTip>
                         </TextBox>
                         
                         <TextBox Text="{Binding Sentence}" AcceptsReturn="True"
