--- a/EssayMaker.WPF/EssayView.xaml
+++ b/EssayMaker.WPF/EssayView.xaml
@@ -24,7 +24,7 @@
                  metro:TextboxHelper.Watermark="Title"
                  FontFamily="Segoe UI light" FontSize="36" Margin="2" MaxWidth="896" Grid.ColumnSpan="2" />
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="2">
+        <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="900">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
