--- a/EssayMaker.WPF/EssayView.xaml
+++ b/EssayMaker.WPF/EssayView.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:essay="clr-namespace:EssayMaker.Core"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" d:DesignHeight="500" d:DesignWidth="900" 
+             mc:Ignorable="d" d:DesignHeight="500" d:DesignWidth="900"
              d:DataContext="{d:DesignInstance essay:Essay}">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -13,42 +13,43 @@
             <ColumnDefinition Width="36*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="80*"/>
-            <RowDefinition Height="240*"/>
-            <RowDefinition Height="80*"/>
-        </Grid.RowDefinitions> 
-        
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="80*" />
+            <RowDefinition Height="240*" />
+            <RowDefinition Height="80*" />
+        </Grid.RowDefinitions>
+
         <TextBox Text="{Binding Title}" Foreground="{DynamicResource AccentColorBrush}"
+                 SpellCheck.IsEnabled="True"
                  metro:TextboxHelper.Watermark="Title"
                  FontFamily="Segoe UI light" FontSize="36" Margin="2" MaxWidth="896" Grid.ColumnSpan="2" />
 
         <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="900">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="160"/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition Width="160" />
             </Grid.ColumnDefinitions>
-            
+
             <TextBox Text="{Binding Author}"
                  metro:TextboxHelper.Watermark="Author"
                  FontFamily="Segoe UI Light" FontSize="20"
-                 Grid.Column="0" Margin="2"/>
+                 Grid.Column="0" Margin="2" />
 
             <TextBox Text="{Binding TeacherName}"
                  metro:TextboxHelper.Watermark="Teacher Name"
                  FontFamily="Segoe UI Light" FontSize="20"
-                 Grid.Column="1" Margin="2"/>
-            
+                 Grid.Column="1" Margin="2" />
+
             <DatePicker SelectedDate="{Binding Date}"
                         metro:TextboxHelper.Watermark="Date"
                         FontFamily="Segoe UI Light" FontSize="18"
-                        Grid.Column="2" Margin="2"/>
+                        Grid.Column="2" Margin="2" />
         </Grid>
-        
-        
+
         <TextBox Text="{Binding Thesis}" AcceptsReturn="True"
+                 SpellCheck.IsEnabled="True"
                  metro:TextboxHelper.Watermark="Thesis"
                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
@@ -58,53 +59,45 @@
             <TextBox.ToolTip>
                 <StackPanel>
                     <TextBlock FontWeight="Bold">Thesis Paragraph</TextBlock>
-                    <TextBlock>This paragraph should include a topic sentence, <LineBreak/> 
-                        3 examples (that will tie back to your body paragraph's <LineBreak/>
-                        topics about your topic, and a concluding sentence that <LineBreak/>
+                    <TextBlock>This paragraph should include a topic sentence, <LineBreak />
+                        3 examples (that will tie back to your body paragraph's <LineBreak />
+                        topics about your topic, and a concluding sentence that <LineBreak />
                         repeats the main idea.</TextBlock>
                 </StackPanel>
             </TextBox.ToolTip>
         </TextBox>
 
-
-
-
-
-            <ItemsControl ItemsSource="{Binding Topics}"
+        <ItemsControl ItemsSource="{Binding Topics}"
                       Grid.Row="3" MaxWidth="896" Grid.ColumnSpan="2" Margin="2,0">
             <ItemsControl.Template>
-                
-                
+
                 <ControlTemplate TargetType="ItemsControl">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Disabled">
                         <UniformGrid IsItemsHost="True"
-                                    Rows="1"/>
-                    
+                                    Rows="1" />
                     </ScrollViewer>
-                    
                 </ControlTemplate>
-                
             </ItemsControl.Template>
             <ItemsControl.ItemTemplate>
-                
+
                 <DataTemplate>
                     <Grid d:DataContext="{d:DesignInstance essay:EssayTopic}">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height=".25*"/>
-                            <RowDefinition Height=".5*"/>
-                            <RowDefinition Height=".25*"/>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height=".25*" />
+                            <RowDefinition Height=".5*" />
+                            <RowDefinition Height=".25*" />
                         </Grid.RowDefinitions>
-                        
+
                         <TextBox Text="{Binding Title}"
+                                 SpellCheck.IsEnabled="True"
                                  Foreground="{DynamicResource AccentColorBrush}"
                                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
                                  Margin="2"
                                  metro:TextboxHelper.Watermark="Topic Name"
-                                 TextWrapping="Wrap" 
-                                 >
+                                 TextWrapping="Wrap">
                             <TextBox.ToolTip>
                                 <StackPanel>
                                     <TextBlock FontWeight="Bold">Topic Name</TextBlock>
@@ -112,8 +105,9 @@
                                 </StackPanel>
                             </TextBox.ToolTip>
                         </TextBox>
-                        
+
                         <TextBox Text="{Binding Sentence}" AcceptsReturn="True"
+                                 SpellCheck.IsEnabled="True"
                                  metro:TextboxHelper.Watermark="Topic Sentence"
                                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
@@ -128,8 +122,9 @@
                                 </StackPanel>
                             </TextBox.ToolTip>
                         </TextBox>
-                        
+
                         <TextBox Text="{Binding Examples}" AcceptsReturn="True"
+                                 SpellCheck.IsEnabled="True"
                                  metro:TextboxHelper.Watermark="Examples"
                                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
@@ -137,7 +132,7 @@
                                  Grid.Row="2" Margin="2"
                                  TextWrapping="Wrap"
                                  MaxWidth="236">
-                                 
+
                             <TextBox.ToolTip>
                                 <StackPanel>
                                     <TextBlock FontWeight="Bold">Examples</TextBlock>
@@ -147,6 +142,7 @@
                         </TextBox>
 
                         <TextBox Text="{Binding ConcludingSentence}" AcceptsReturn="True"
+                                 SpellCheck.IsEnabled="True"
                                  metro:TextboxHelper.Watermark="Concluding Sentence"
                                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
@@ -167,6 +163,7 @@
         </ItemsControl>
 
         <TextBox Text="{Binding Conclusion}" AcceptsReturn="True"
+                 SpellCheck.IsEnabled="True"
                  metro:TextboxHelper.Watermark="Conclusion"
                  FontFamily="{Binding DataContext.FontFamily,RelativeSource={RelativeSource AncestorType=Window}}"
                  FontSize="{Binding DataContext.FontSize, RelativeSource={RelativeSource AncestorType=Window}}"
@@ -175,13 +172,12 @@
             <TextBox.ToolTip>
                 <StackPanel>
                     <TextBlock FontWeight="Bold">Concluding Paragraph</TextBlock>
-                    <TextBlock>This paragraph should conclude your subject. <LineBreak/> 
-                        e.g. using words like 'as you can see'. <LineBreak/>
-                        Tie back to your body paragraphs and <LineBreak/>
+                    <TextBlock>This paragraph should conclude your subject. <LineBreak />
+                        e.g. using words like 'as you can see'. <LineBreak />
+                        Tie back to your body paragraphs and <LineBreak />
                         use 3 sentences about them.</TextBlock>
                 </StackPanel>
             </TextBox.ToolTip>
         </TextBox>
     </Grid>
 </UserControl>
-
